# rag-pinecone-chat

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-infrastructure.yml
backend/: .dockerignore  Dockerfile  README.md  copy.env  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  dependencies.py  documents.py  health.py
backend/app/core/: config.py  logging_config.py  security.py
backend/app/db/: mongodb.py
backend/app/middleware/: rate_limiter.py  request_tracking.py
backend/app/models/: chat.py  user.py
backend/app/services/: chat_service.py  embeddings.py  vector_store.py
backend/scripts/: cleanup_empty_metadata.py  delete_empty_metadata_from_json.py  ingest_wise_articles.py
data/: wise_help_articles.json  wise_help_articles_part2.json
frontend/: Dockerfile  copy.env.local  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/auth/: LoginModal.tsx  (+2 more)
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChat.ts  useChatSessions.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
infrastructure/: .gitignore  CDK_DEPLOYMENT.md  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/stacks/: dns-stack.ts  ecr-stack.ts  ecs-stack.ts  secrets-stack.ts  vpc-stack.ts
scripts/: check-env-sync.sh  setup-github-oidc.sh
(+9 files in other folders)
